--- a/menu-a-la-française.html
+++ b/menu-a-la-française.html
@@ -50,48 +50,84 @@
             <section class="food food_1">
                 <h3>Entrées</h3>
                 <div class="flex-menu">
-                    <!-- ! Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Tarte de poulpe acidulé</h4>
+                    <!-- !! Card Food finale -->
 
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Aux zests d'orange</p>
-                            <div class="food__price">25€</div>
-                            <div class="wrapper_check">
-                                <i class="fas fa-check-circle fa-2x"></i>
+                            <div class="food__wrapper-text">
+
+                                <p class="food__titre">Tartare de poulpe acidulé
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Aux zestes d'orange
+
+                                    </p>
+                                </div>
                             </div>
-                          
+                            <div class="food__price">25€
+                            </div>
                         </div>
-                       
-
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Velouté de légumes d'antan</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Carotte, panais, topinambour</p>
-                            <div class="food__price">35€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Velouté de légumes d'antan
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Carotte, panais, topinambour
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">35€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Soupe à l'oignon</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Revisitée</p>
-                            <div class="food__price">20€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Soupe à l'oignon
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Revisitée
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">20€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -102,43 +138,84 @@
                 <h3>Plats</h3>
                 <div class="flex-menu">
 
-                    <!-- ! Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Coquilles Saint-Jacques</h4>
+                    <!-- !! Card Food finale -->
 
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Accompagnées d'une purée de panais</p>
-                            <div class="food__price">40€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Coquilles Saint-Jacques
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Accompagnées d'une purée de panais
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">40€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Magret de canard</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Et parmentier de pommes de terre</p>
-                            <div class="food__price">35€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Magret de canard
+
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Et parmentier de pommes de terre
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">35€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Pigeonneau d’Ille-et-Vilaine</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Sur son lit de gnocchis aux légumes</p>
-                            <div class="food__price">44€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Pigeonneau d’Ille-et-Vilaine
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Sur son lit de gnocchis aux légumes
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">44€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -149,43 +226,83 @@
                 <h3>Desserts</h3>
                 <div class="flex-menu">
 
-                    <!-- ! Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Pétales de violettes glacés</h4>
+                    <!-- !! Card Food finale -->
 
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Et purée de noisettes</p>
-                            <div class="food__price">18€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Pétales de violettes glacés
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Et purée de noisettes
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">18€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Fondant au chocolat</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Revisité</p>
-                            <div class="food__price">22€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Fondant au chocolat
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Revisité
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">22€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Millefeuille croustillant</h4>
+                    <!-- ! Fin Card food finale -->
 
+
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Myrtilles et pâte d’amande</p>
-                            <div class="food__price">23€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Millefeuille croustillant
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Myrtilles et pâte d’amande
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">23€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
