--- a/menu-la-note-enchantée.html
+++ b/menu-la-note-enchantée.html
@@ -51,61 +51,105 @@
                 <h3>Entrées</h3>
                 <div class="flex-menu">
 
-                    <!-- ! Card food -->
+                    <!-- !! Card Food finale -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Ravioles de foie gras</h4>
-
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Accompagnés de leur crème à la truffe
-                            </p>
-                            <div class="food__price">25€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Ravioles de foie gras
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Accompagnés de leur crème à la truffe
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">25€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Caviar osciètre</h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Sur blini à la farine de blé noir
-                            </p>
-                            <div class="food__price">35€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Caviar osciètre
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Sur blini à la farine de blé noir
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">35€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Homard et espuma de potiron
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Mariné aux zestes d'orange
-                            </p>
-                            <div class="food__price">20€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Homard et espuma de potiron
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Mariné aux zestes d'orange
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">20€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Foie gras de canard cuit entier
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Confiture de figue et pain toasté
-                            </p>
-                            <div class="food__price">35€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Foie gras de canard cuit entier
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Confiture de figue et pain toasté
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">35€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
 
                 </div>
             </section>
@@ -116,49 +160,80 @@
             <section class="food food_2">
                 <h3>Plats</h3>
                 <div class="flex-menu">
+                    <!-- !! Card Food finale -->
 
-                    <!-- ! Card food -->
-
-                    <div class="food__card">
-                        <h4 class="food__titre">Noix de coquilles Saint-Jacques</h4>
-
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Sur lit de purée de céleri-rave
-                            </p>
-                            <div class="food__price">40€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Noix de coquilles Saint-Jacques
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Sur lit de purée de céleri-rave
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">40€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Langoustine poêlée
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Purée de patate douce
-                            </p>
-                            <div class="food__price">35€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Langoustine poêlée
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Purée de patate douce
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">35€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Mijoté de queue de boeuf
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Et riz sauvage aux zestes de citron
-                            </p>
-                            <div class="food__price">44€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Mijoté de queue de boeuf
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Et riz sauvage aux zestes de citron
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">44€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
@@ -170,47 +245,79 @@
                 <div class="flex-menu">
 
                     <!-- ! Card food -->
+                    <!-- !! Card Food finale -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Macaron noisette et chocolat
-                        </h4>
-
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Glace au caramel brun et sel de Guérande
-                            </p>
-                            <div class="food__price">18€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Macaron noisette et chocolat
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Glace au caramel brun et sel de Guérande
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">18€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Baba au rhum revisité
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Avec son coulis de citron
-                            </p>
-                            <div class="food__price">22€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Baba au rhum revisité
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Avec son coulis de citron
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="food__price">22€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
 
-                    <div class="food__card">
-                        <h4 class="food__titre">Tarte au citron meringuée
-                        </h4>
+                    <!-- ! Fin Card food finale -->
 
+                    <!-- !! Card Food finale -->
+
+                    <div class="  food__card">
                         <div class="food__flex">
-                            <p>Déstructurée</p>
-                            <div class="food__price">23€</div>
-                        </div>
+                            <div class="food__wrapper-text">
 
+                                <p class="food__titre">Tarte au citron meringuée
+                                </p>
+
+                                <div class="food_texte">
+                                    <p>Déstructurée</p>
+                                </div>
+                            </div>
+                            <div class="food__price">23€
+                            </div>
+                        </div>
+                        <div class="validation__box">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
                     </div>
 
-                    <!-- ! fin Card food -->
+
+                    <!-- ! Fin Card food finale -->
                 </div>
             </section>
             <!-- ? FIN Section food -->
